Bug 1626005 - Fix crash when non-constructed sheets call replace() r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D71399